<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home_menu" />
    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/attendance"
        android:title="@string/attendance_menu" />
    <item
        android:id="@+id/nav_assignments"
        android:icon="@drawable/assignment_menu"
        android:title="@string/assignment_menu" />

    <item
        android:id="@+id/news_events"
        android:icon="@drawable/news_menu"
        android:title="@string/news_and_event_menu" />

    <item
        android:id="@+id/campusMap"
        android:icon="@drawable/campus_menu"
        android:title="@string/campus_menu" />

    <item
        android:id="@+id/student_orientation"
        android:icon="@drawable/orientation_menu"
        android:title="@string/orientation_menu" />

    <item
        android:id="@+id/downloads"
        android:icon="@drawable/download"
        android:title="@string/downloads_menu" />

    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/support_menu"
        android:title="@string/support_menu" />

    <item
        android:id="@+id/nav_edit_profile"
        android:icon="@drawable/edit_profile"
        android:title="@string/edit_profile" />

    <item
        android:id="@+id/nav_internalMarks"
        android:icon="@drawable/marks_drawer"
        android:title="@string/internal_marks" />

    <item
        android:id="@+id/nav_examTimeTable"
        android:icon="@drawable/time_table"
        android:title="@string/time_table" />

    <!--<item
        android:id="@+id/nav_survey"
        android:icon="@drawable/survey"
        android:title="@string/survey" />-->

   <!-- <item
        android:id="@+id/nav_covid"
        android:icon="@drawable/covid19"
        android:title="@string/covid19" />
-->
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout_menu" />

</menu>
