<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:showIn="navigation_view">    <group android:checkableBehavior="single">        <item            android:id="@+id/nav_homeP"            android:icon="@drawable/home"            android:title="@string/home_menu" />        <item            android:id="@+id/nav_ica_marksP"            android:icon="@drawable/marks_drawer"            android:title="@string/internal_marks" />        <item            android:id="@+id/nav_supportP"            android:icon="@drawable/support_menu"            android:title="@string/support_menu" />        <item            android:id="@+id/downloadsP"            android:icon="@drawable/download"            android:title="@string/downloads_menu" />        <item            android:id="@+id/edit_profileP"            android:icon="@drawable/change_password"            android:title="@string/change_password" />        <item            android:id="@+id/nav_examTimeTableP"            android:icon="@drawable/time_table"            android:title="@string/time_table" />        <item            android:id="@+id/nav_logoutP"            android:icon="@drawable/logout"            android:title="@string/logout_menu" />    </group></menu>